--- a/笔记.md
+++ b/笔记.md
@@ -23,3 +23,15 @@ src
 
 permission.js文件：与导航守卫相关
 setttins：项目的配置项文件
+
+
+
+## 后台管理系统的API接口文档：
+http://39.98.123.211:8170/swagger-ui.html
+http://39.98.123.211:8216/swagger-ui.html
+
+3.完成登录业务
+        ---静态组件完成
+        ---书写api（换成真实的接口）
+        ---axios的二次封装
+        ---需要解决代理跨域问题
