--- a/笔记.md
+++ b/笔记.md
@@ -30,8 +30,11 @@ setttins：项目的配置项文件
 http://39.98.123.211:8170/swagger-ui.html
 http://39.98.123.211:8216/swagger-ui.html
 
-3.完成登录业务
+## 完成登录业务
         ---静态组件完成
         ---书写api（换成真实的接口）
         ---axios的二次封装
         ---需要解决代理跨域问题
+
+##  退出登录
+        ---退出后清除token
