--- a/笔记.md
+++ b/笔记.md
@@ -40,3 +40,15 @@ http://39.98.123.211:8216/swagger-ui.html
         ---退出后清除token
 
 ## 项目路由的搭建
+
+## 完成品牌管理的静态组件
+
+## 完成品牌管理列表的展示
+    ---书写api接口的书写
+
+## 完成添加品牌的功能
+        ---书写api接口
+        ---收集数据 发请求
+
+## 表单验证功能
+
