--- a/笔记.md
+++ b/笔记.md
@@ -50,7 +50,7 @@ http://39.98.123.211:8216/swagger-ui.html
         ---书写api接口
         ---收集数据 发请求
 
-## 表单验证功能
+## 表单验证功能（element-ui）
         ---自定义表单验证（重点）
 
 ## 删除品牌的操作
@@ -59,3 +59,15 @@ http://39.98.123.211:8216/swagger-ui.html
 
 ## 获取数据动态的展示三级联动
 
+## 收集平台属性操作
+属性：颜色
+属性名称：蓝色 粉色 红色
+
+## 添加属性中的 查看模式与编辑模式
+
+查看模式：显示span
+编辑模式：显示input
+注意：通过flag标记进行查看模式与编辑模式，但是需要注意的是，一个flag没有办法控制全部的属性值的切换
+
+
+## 保存按钮的功能实现（请求）
