--- a/笔记.md
+++ b/笔记.md
@@ -71,3 +71,14 @@ http://39.98.123.211:8216/swagger-ui.html
 
 
 ## 保存按钮的功能实现（请求）
+
+## spu 管理模块
+
+## spuFrom的业务逻辑分析
+    ---品牌数据需要发请求：http://localhost:9529/dev-appi/admin/product/baseTrademark/getTrademarkList
+    ---获取平台中全部的销售属性: http://localhost:9529/dev-api/admin/product/baseSaleAttrList
+
+# 清除组件实例的数据快速方式  （数据初始化）：Object.assign(this._data,this.$options.data())
+        // this._data:当前组件实例的响应式数据
+        // this.$options.data():这是data配置项 执行就是data初始化数据
+      Object.assign(this._data,this.$options.data())  //data数据初始化（清除数据）
